# CB8

./: .dockerignore  .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CMakeLists.txt  FEATURES.md  FINDINGS.md  IDEAS.md  PLAN1.md  PLAN10.md  PLAN2.md  PLAN7.md  PLAN8.md  README.md  REFACTORS2.md  WEBUI_PRIMARY.md  book.icns  bugs.md  dartdoc_options.yaml  design.md  forge.config.ts  later.md  meta.json  package-lock.json  package.json  perf.md  pnpm-lock.yaml  pnpm-workspace.yaml  pubspec.yaml  requirements.md  tasks.md  todo.md  tsconfig.json  tutorial.md  vite.main.config.ts  vite.renderer.config.ts  vite.server.config.ts  vitest.config.ts
.github/workflows/: release.yml  wiki-pages.yml
android/: key.properties.example
android/app/: build.gradle.kts  proguard-rules.pro
docker/: Dockerfile  docker-compose.yml
docs/: 7zTASKS.md  DEPLOYMENT.md  FEATURES.md  PLAN10.md  PLAN2.md  PLAN3.md  PLAN4.md  PLAN5.md  REFACTOR.md  REFACTORS2.md  TODO.md
docs/hierarchy/: design.md  requirements.md  summary.md  tasks.md
docs/legacy/: FEATURES.md  (+6 more)
ios/: Podfile
lib/: app.dart  main.dart
scripts/: brand-dev-electron.mjs  build-standalone.mjs  copy-web.mjs
test/: cbz_import_test.dart  comic_summary_sync_test.dart  connections_controller_test.dart  embedded_metadata_test.dart  local_source_management_test.dart  reading_stats_test.dart  remote_source_test.dart
web/: index.html  manifest.json
webui/: .gitignore  AGENTS.md  ARCHITECTURE.md  CONTRIBUTING.md  DEPLOY.md  README.md  tailwind.config.js  vite.renderer.config.ts
windows/: CMakeLists.txt
(+518 files in other folders)
